[package]
name = "rust-rl"
version = "0.1.0"
authors = ["zuse"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
rand = "0.5.5"
fnv = "1.0.7"
ndarray-rand = "0.11.0"
ndarray-stats = "0.3.0"

[features]
default = []
download = ["datasets/download"]

[dependencies.datasets]
git = "https://github.com/ZuseZ4/Datasets"
branch = "master"
default-features = false

[dependencies.ndarray]
version = "0.13.1"
features = ["rayon"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
